--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<a href="momentum_designsystem.html">
 						<div class="work-thumb">
 							<div class="work-title">
-					          <h3 class="uppercase">Webex<br>Momentum Design System<br/>
+					          <h3 class="uppercase">Webex<br>Momentum <br/>fDesign System<br/>
 					          <span class="work-category"></span>
 					          </h3>
 					        </div>
@@ -100,11 +100,11 @@
 					<a href="webex_2020.html">
 						<div class="work-thumb">
 							<div class="work-title">
-					          <h3 class="uppercase">Cisco<br/>Webex Digital<br/>
-					          <span class="work-category">Web Design</span>
+					          <h3 class="uppercase">Momentum<br/>Request<br/>
+					          <span class="work-category">Quality Control</span>
 					          </h3>
 					        </div>
-				        	<img src="assets/images/webexdigital_thumb.jpg">
+				        	<img src="assets/images/momentum_request_thumb.jpg">
 				        </div>
 			        </a>
 				</div>
