--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<a href="momentum_designsystem.html">
+					<a href="mmomentum_designsystem.html">
 						<div class="work-thumb">
 							<div class="work-title">
-					          <h3 class="uppercase">Webex<br>Momentum <br/>fDesign System<br/>
+					          <h3 class="uppercase">Webex<br>Momentum <br/>Design System<br/>
 					          <span class="work-category"></span>
 					          </h3>
 					        </div>
