--- a/Momentum_DesignSystem.html
+++ b/Momentum_DesignSystem.html
@@ -103,7 +103,7 @@
 	</div>
 	<div class=" container-tiny cisco_black">
 		<div class="row">
-			<div class="col-sm-8 div-center content-panel">
+			<div class="col-sm-8 div-center content-panel container-small">
 				<h1 class="text-white">Execution</h1>
 				<p>The team started by dissecting all of the components. We took the Atomic Design approach, by rebuilding the component starting from Atoma, them Molecues, to Organism, and Templates if necessary.</p>
 				<p>Each of our designers started by learning Atomic Design System priciple, as it can provide great benefit to the design system. Atomic design enables the designers to have consistency, scalability, reusability, and better collaboration.</p>
@@ -119,7 +119,7 @@
 	</div>
 	<div class=" container-tiny cisco_black">
 		<div class="row">
-			<div class="col-sm-8 div-center content-panel">
+			<div class="col-sm-8 div-center content-panel container-small">
 				<h1 class="text-white">Dark Mode</h1>
 				<p>For the rebrand, we also implemented the Dark mode, which was not available on the current system.</p>
 				<p>According to the reseach, about 70% of software engineers prefer working in Dark mode, so it seems natural for them to create tools with dark backgrounds and colored text. Also research team got lot of user feedback from customers wanting dark mode. Dark mode also helps you save battery life, reduce blue light, which will reduce any stress on the eyes from the screen.</p>
@@ -135,7 +135,7 @@
 	</div>
 	<div class="cisco_black container-tiny">
 		<div class="row">
-			<div class="col-sm-6 div-center content-panel">
+			<div class="col-sm-6 div-center content-panel container-small">
 				<h1 class="text-white">Renewed System</h1>
 				<p>As a team we have audited total of 39 components, deprecated 4 components, added 5 new components</p>
 				<p>From the 39 components audited, 34 of the components got rebranded and documented.</p>
