--- a/doc_site.html
+++ b/doc_site.html
@@ -69,12 +69,15 @@
 			<div class="row product_site">
 				<div class="col-md-6">
 					<h3>Brief</h3>
-					<p class="txt-box-pad-bot-20">Momentum Design system website has been outdated for a long time and update was long overdue. With the new complete rebarnd of the components, we decided to updated the Momentum Design Documentation website to go along with the rebrand.
+					<p class="txt-box-pad-bot-20">Momentum Design system website has been outdated for a long time and update was long overdue. With the new complete rebarnd of the design system components, this new website will be dedicated to system documentation. </p>
+					<p>This will be the single source of truth for all designers, engineers, and other stakeholders interested in learning more about Momentum and it’s application into product.
 					</p>
 					<h3>Created at:</h3>
 					<p>Momentum Design Team</p>
 				</div>
 				<div class="col-md-6">
+					<h3>Project</h3>
+					<p class="txt-box-pad-bot-20">Designers on the Momentum team must be able to update and maintain information on the site without the help of engineers. We want to eliminate as many roadblocks as possible to updating website content.</p>
 					<h3>Role</h3>
 					<p class="txt-box-pad-bot-20">Head Designer</p>
 					<h3>Team</h3>
@@ -92,113 +95,146 @@
 	<div class="container-fluid cisco_black">
 		<div class="row">
 			<div class="col-sm-12 work-stats">
-				<img class="img-center" src="assets/images/doc_site/doc_site.jpg">
+				<img class="img-center" src="assets/images/doc_site/site.jpg">
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid container-tiny cisco_black">
-		<div class="row">
-			<div class="col-sm-6 content-panel">
+	<div class="container-fluid cisco_black">
+		<div class="row col-sm-12">
+			<div class="col-sm-4 content-panel">
 				<h1 class="text-white">Process</h1>
-				<p>It was important for the design team to work with the engineering team to establish a system where designers don't have to rely on engineers for any updates or edits.</p>
-				<p>Another goal we wanted to accomplish was to create a some sort of CMS that create smooth and little to no disturbance between design and engineering.</p>
 			</div>
-			<div class="col-sm-6 content-panel">
-				<h1 class="text-white">Goals</h1>
-				<ul>
-					<li>Intergrate Figma to web rending process. ENG team set out to establish a system where back-end pulls the data and content from the very figma file designers designed on. </li>
-					<li>Create a system to communicate between figma and the code. We have create unique layer names with emoticons to communicate to the back-up to trigger which layer to render and process.</li>
-				</ul>
+			<div class="col-sm-4 content-panel">
+				<h3 class="text-white">Audit Current site</h3>
+				<p>We started by auditing and dissecting down the existing website. I wanted to compare the new contents that are available to me for the new website, and what is currently on the outdated site. </p>
+				<p>We do not have to have all the same pages and topics, but I wanted to see what we can keep, update, or eliminate from the current site. </p>
+				<p>Competitive analysis</p>
+				<p>I have reviewed Google Material, IBM Carbon, Shopify Polaris, Adobe Spectrum and Salesforce Lighting. </p>
+			</div>
+			<div class="col-sm-4 content-panel">
+				<h3 class="text-white">Competitive analysis</h3>
+				<p>I have reviewed Google Material, IBM Carbon, Shopify Polaris, Adobe Spectrum and Salesforce Lighting. </p>
+
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid">
+	
+	<div class="container-fluid cisco_black">
 		<div class="row">
 			<div class="col-sm-12 work-stats">
-				<img class="img-center" src="assets/images/doc_site/docsite_convert.jpg">
+				<img class="img-center" src="assets/images/doc_site/audit.jpg">
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid container-tiny cisco_black">
+	<div class="container-fluid cisco_black">
+		<div class="row col-sm-12">
+			<div class="col-sm-4 content-panel">
+				<h1 class="text-white">Process</h1>
+			</div>
+			<div class="col-sm-4 content-panel">
+				<h3 class="text-white">Content gathering</h3>
+				<p>The contents for the Guidelines pages were all created in Figma by different designers. These figma files were not created with web in mind, so I had to gather them and restructure them to fit on web-format. </p>
+				<p>I also had to go through all the content to make sure they were irrelevant, representing best practices, Momentum philosophy, and are in fact useful. </p>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid cisco_black">
 		<div class="row">
-			<div class="col-sm-6 content-panel">
-				<h1 class="text-white">System</h1>
-				<p>We worked with the ENG to establish a communication rules between Figma and Web. By using certain emoticons on layer & page names, Figma is able to tell the code what and how to render.</p>
-				<p>Also a newly developed type system, spacing guideline, and content organization guide communicating with back-end as well, rendering whatever is on Figma straight on the Web with consistency.</p>
-			</div>
-			<div class="col-sm-6 content-panel">
-				<h1 class="text-white">Goals</h1>
-				<ul>
-					<li>Not rely on ENG team to make any future changes or edits.</li>
-					<li>Re-create a template design that fits web sizing.</li>
-					<li>Create a process we can re-use for any future documentations.</li>
-					<li>System that runs from migrating documentation to web format, review, render on test, and launch to live site.</li>
-				</ul>
+			<div class="col-sm-12 work-stats">
+				<img class="img-center" src="assets/images/doc_site/content.jpg">
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid">
+	<div class="container-fluid cisco_black">
+		<div class="row col-sm-12">
+			<div class="col-sm-4 content-panel">
+				<h1 class="text-white">Process</h1>
+			</div>
+			<div class="col-sm-4 content-panel">
+				<h3 class="text-white">Type system</h3>
+				<p>All of the Figma files were created using different type sizes and typefaces. The guideline files were created at different times, so they had to share a single system. I have researched and created a type system that is best equipped and fit for the modern web best practice.</p>
+
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid cisco_black">
 		<div class="row">
 			<div class="col-sm-12 work-stats">
 				<img class="img-center" src="assets/images/doc_site/docsite_type.jpg">
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid container-tiny cisco_black">
-		<div class="row">
-			<div class="col-sm-6 content-panel">
-				<h1 class="text-white">Atomic Approach</h1>
-				<p>In order to establish a system, I took the atomic approach to create templates for other designers to use. This system will have designers easily put together a page design that is consistent and ready to be rendered.</p>
-				<p>Starting with the Type system at the Atom level, it grew into text blocks, section blocks, text and image combination, content rows, tables and so on.</p>
+	<div class="container-fluid cisco_black">
+		<div class="row col-sm-12">
+			<div class="col-sm-4 content-panel">
+				<h1 class="text-white">Process</h1>
 			</div>
-			<div class="col-sm-6 content-panel">
-				<h1 class="text-white">Goals</h1>
-				<ul>
-					<li>As the whole point of keeping things in Figma was to give more freedom to the designers, I had to create a system for designers to use pre-made blocks of designer elements that are consistent.</li>
-					<li>This template pages will help the designers by giving them little to no learning curve on the layout and sizing rules, and layer naming rules as well.</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-12 work-stats">
-				<img class="img-center" src="assets/images/doc_site/docsite_temp.jpg">
-			</div>
-		</div>
-	</div>
-	<div class="container-fluid container-tiny cisco_black">
-		<div class="row">
-			<div class="col-sm-6 content-panel">
-				<h1 class="text-white">Guidelines</h1>
-				<p>From page width to type size, everything had to be resized from the current Documentation Template. It was great opportunity to audit the current documentation files to set up rules to keep all the pages consistent.</p>
-				<p>I wanted to create a full guideline that explains to the designers what has changed, what to look for when migrating current documentation to web-format, and best practice to have the right properties for proper rendering</p>
-			</div>
-			<div class="col-sm-6 content-panel">
-				<h1 class="text-white">Goals</h1>
-				<ul>
-					<li>Establish content order for Spec, Guideline and Accessibility documentations.</li>
-					<li>Consistent padding and spacing system. Spacing between title and text, each sections, sub-sections, padding inside component examples, and overall width</li>
-					<li>Breakpoints for responsiveness, setting min-width to have figma stack elements</li>
-					<li>Table rules set; item order and token name conventions to be consistent</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-12 work-stats">
-				<img class="img-center" src="assets/images/doc_site/response_padd.jpg">
-			</div>
-		</div>
-	</div>
+			<div class="col-sm-4 content-panel">
+				<h3 class="text-white">Template creation</h3>
+				<p>After having the Type components at the atomic level, I was able to make more combinations of text system and also text + image combinations as well. I wanted to create a component and variants of these but the code system we have in place actually reads the layer names to render different type classes, so the components had to be unique to its own. </p>
+				<p>With the template, I was able to create a system and consistent spacing and margins for the website template. Using this template, the designers can easily plug in their content and it will be web-ready.</p>
 
-	<div class=" container-tiny cisco_black">
+			</div>
+			<div class="col-sm-4 content-panel">
+				<h3 class="text-white">Guidelines</h3>
+				<p>From page width to type size, everything had to be resized from the current Documentation Template. It was great opportunity to audit the current documentation files to set up rules to keep all the pages consistent.</p>
+				<p>I wanted to create a full guideline that explains to other designers what has changed, what to look for when migrating current documentation to web-format, and best practice to have the right properties for proper rendering</p>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid cisco_black">
 		<div class="row">
-			<div class="col-sm-8 div-center content-panel">
-				<h1 class="text-white">Next Steps</h1>
-				<p>Continue to QA and update the template for more use cases. Currently we have team members starting AI patterns and documentation, which serve as great test on how designers respond to the template and the guideline</p>
-				<p>Have more engineers get involve to evolve the CMS system. We are pursuing to create Figma plug-in where designers don't even have to leave Figma to render. Right now we need to put in a manual github work order.</p>
+			<div class="col-sm-12 work-stats">
+				<img class="img-center" src="assets/images/doc_site/template.jpg">
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid cisco_black">
+		<div class="row col-sm-12">
+			<div class="col-sm-4 content-panel">
+				<h1 class="text-white">Process</h1>
+			</div>
+			<div class="col-sm-4 content-panel">
+				<h3 class="text-white">Migration</h3>
+				<p>Using the template I built, I started the migration process. Some of the pain points were lot of copy-pasting, and figuring out the proper settings in Figma. It felt like I was doing the front-end work through Figma settings, and I had to test out each of the width and height settings in Figma. </p>
+				<p>Also having the right image auto-layout properties took some time to figure out the proper settings, as back-end code developed, the Figma setting also had to be adjusted accordingly.</p>
+
+			</div>
+			<div class="col-sm-4 content-panel">
+				<h3 class="text-white">Quality assurance</h3>
+				<p>I had to go through a series of trial and error with the spacing and type sizing, as the design on Figma and the rendered design on the website were not identical.</p>
+				<p>Because the template and spacing have been updated several times, I had to make sure all the type sizes and spacing are consistent throughout all the pages.</p>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid cisco_black">
+		<div class="row">
+			<div class="col-sm-12 work-stats">
+				<img class="img-center" src="assets/images/doc_site/migration.jpg">
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid cisco_black">
+		<div class="row col-sm-12">
+			<div class="col-sm-4 content-panel">
+				<h1 class="text-white">Integration</h1>
+			</div>
+			<div class="col-sm-4 content-panel">
+				<h3 class="text-white">Pros</h3>
+				<p>Designers can control front-end from Figma, including responsive stacking.</p>
+				<h3 class="text-white">Cons</h3>
+				<p>Trial and Error, some designs need to be hardcoded, such as page background image, menu, header, and footer. Github work-order takes a bit of time when rendering.</p>
+			</div>
+			<div class="col-sm-4 content-panel">
+				<h3 class="text-white">Next step</h3>
+				<p>Engineers will be building a Figma plug-in that allows the designers to deploy the design to the web without leaving Figma. </p>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid cisco_black">
+		<div class="row">
+			<div class="col-sm-12 work-stats">
+				<img class="img-center" src="assets/images/doc_site/site.jpg">
 			</div>
 		</div>
 	</div>
