--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<a href="mmomentum_designsystem.html">
+					<a href="momentum_designsystem.html">
 						<div class="work-thumb">
 							<div class="work-title">
 					          <h3 class="uppercase">Webex<br>Momentum <br/>Design System<br/>
