--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
    	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.0/isotope.pkgd.js"></script>
        
 </head>
-<body id="page-top" class="index">
+<body id="page-top" class="index cisco_black">
 
 <!-- Preloader -->
 <!-- <div id="preloader">
@@ -68,13 +68,13 @@
 	<div class="container work-stats about-box">
 		<div class="row">
 			<div class="col-md-4">
-				<h3 class="about-subtitle">About Me</h3>
+				<h3 class="about-subtitle text-white">About Me</h3>
 			</div>
 			<div class="col-md-8">
-				<h3 class="about-h3">UI/UX digital product designer based in Washington DC area. I currently work for a Cisco, and has experience working with clients in various fields such as US federal government, healthcare, education and agriculture, telecommunication and commercial brands.<h3/>
-				<h3><br/>
+				<h3 class="about-h3 text-white">UI/UX digital product designer based in Washington DC area. I currently work for a Cisco, and has experience working with clients in various fields such as US federal government, healthcare, education and agriculture, telecommunication and commercial brands.<h3/>
+				<h3 class="text-white"><br/>
 				I create visual identities through product design, web design, user interface and digital graphics based on best practiced user experience methods.</h3>
-				<h3><a href="mailto:kimandy703@gmail.com">Email Me</a></h3>
+				<h3 class="text-white"><a href="mailto:kimandy703@gmail.com">Email Me</a></h3>
 			</div>
 		</div>
 	</div>
@@ -82,35 +82,35 @@
 	<div class="container work-stats about-box">
 		<div class="row">
 			<div class="col-md-4">
-				<h3 class="about-subtitle">Skills</h3>
+				<h3 class="about-subtitle text-white">Skills</h3>
 			</div>
 			<div class="col-md-8">
 				<div class="skill-wrap">
-					<h3>User Interface/Design System</h3>
+					<h3 class="text-white">User Interface/Design System</h3>
 					<div class="skill-bar">
 						<span class="be-skill" data-skill-value="94%" style="background: #2e51dc;width: 94%;"></span>
 					</div>
 				</div>
 				<div class="skill-wrap">
-					<h3>Visual/Web Design</h3>
+					<h3 class="text-white">Visual/Web Design</h3>
 					<div class="skill-bar">
 						<span class="be-skill" data-skill-value="90%" style="background: #2e51dc;width: 90%;"></span>
 					</div>
 				</div>
 				<div class="skill-wrap">
-					<h3>User Experience Design</h3>
+					<h3 class="text-white">User Experience Design</h3>
 					<div class="skill-bar">
 						<span class="be-skill" data-skill-value="80%" style="background: #2e51dc;width: 85%;"></span>
 					</div>
 				</div>
 				<div class="skill-wrap">
-					<h3>Visual Design</h3>
+					<h3 class="text-white">Visual Design</h3>
 					<div class="skill-bar">
 						<span class="be-skill" data-skill-value="80%" style="background: #2e51dc;width: 85%;"></span>
 					</div>
 				</div>
 				<div class="skill-wrap">
-					<h3>Front-end Development</h3>
+					<h3 class="text-white">Front-end Development</h3>
 					<div class="skill-bar">
 						<span class="be-skill" data-skill-value="60%" style="background: #2e51dc;width: 70%;"></span>
 					</div>
@@ -123,27 +123,27 @@
 	<div class="container work-stats about-box">
 		<div class="row">
 			<div class="col-md-4">
-				<h3 class="about-subtitle">About Me</h3>
-				<h3 class="about-subtitle-sm">
+				<h3 class="about-subtitle text-white">About Me</h3>
+				<h3 class="about-subtitle-sm text-white">
 				  <a href="assets/ak_resume_2024.pdf" target="_blank">Download Resume</a>
 				</h3>
 			</div>
 			<div class="col-md-8">
 				<div class="about-exp">
-					<h3 class="about-h3">Cisco / 2018</h3>
-					<h4>Senior User Experience Designer</h4>
+					<h3 class="about-h3 text-white">Cisco / 2018</h3>
+					<h4 class="text-white">Senior User Experience Designer</h4>
 				</div>
 				<div class="about-exp">
-					<h3 class="about-h3">Reingold / 2015-17</h3>
-					<h4>Visual Designer</h4>
+					<h3 class="about-h3 text-white">Reingold / 2015-17</h3>
+					<h4 class="text-white">Visual Designer</h4>
 				</div>
 				<div class="about-exp">
-					<h3 class="about-h3">Munhwa Broadcasting Corp. / 2012-14</h3>
-					<h4>Associate Producer</h4>
+					<h3 class="about-h3 text-white">Munhwa Broadcasting Corp. / 2012-14</h3>
+					<h4 class="text-white">Associate Producer</h4>
 				</div>
 				<div class="about-exp">
-					<h3 class="about-h3">Empire Entertainment Japan / 2008-12</h3>
-					<h4>Producer</h4>
+					<h3 class="about-h3 text-white">Empire Entertainment Japan / 2008-12</h3>
+					<h4 class="text-white">Producer</h4>
 				</div>
 			</div>
 			
@@ -153,7 +153,7 @@
 	<div class="container work-stats about-box">
 		<div class="row">
 			<div class="col-md-4">
-				<h3 class="about-subtitle">Social Network</h3>
+				<h3 class="about-subtitle text-white">Social Network</h3>
 			</div>
 			<div class="col-md-8">
 				<div class="about-sns linkedin">
