--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.0/isotope.pkgd.js"></script>
        
 </head>
-<body id="page-top" class="index">
+<body id="page-top" class="index cisco_black">
 
 <!-- Preloader -->
 <!-- <div id="preloader">
@@ -58,7 +58,7 @@
 					<section id="home" class="hero-sec">
 				        <div>
 				          <h2 class="home-title uppercase" id="gradient">ANDY KIM</h2>
-				          <h2 style="padding-bottom: 60px;">Digital product designer with specialties in responsive Web/UI design based on latest best practiced UX trends.</h1>
+				          <h2 style="padding-bottom: 60px;" class="text-white">Digital product designer with specialties in responsive Web/UI design based on latest best practiced UX trends.</h1>
 				        	<!-- <img class="main-hero" src="assets/images/andy-hero_2017.png">
 				        	<img class="name_tag" src="assets/images/name_tag2.png"> -->
 				        </div>
@@ -96,7 +96,7 @@
 				        </div>
 				    </a>
 				</div>
-				<div class="col-md-4">
+			<!-- 	<div class="col-md-4">
 					<a href="webex_2020.html">
 						<div class="work-thumb">
 							<div class="work-title">
@@ -107,7 +107,7 @@
 				        	<img src="assets/images/momentum_request_thumb.jpg">
 				        </div>
 			        </a>
-				</div>
+				</div> -->
 				<div class="col-md-4">
 					<a href="webex_2020.html">
 						<div class="work-thumb">
