--- a/doc_site.html
+++ b/doc_site.html
@@ -18,7 +18,7 @@
    	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.0/isotope.pkgd.js"></script>
        
 </head>
-<body id="page-top" class="index">
+<body id="page-top" class="index cisco_black">
 
 <!-- Preloader -->
 <!-- <div id="preloader">
