--- a/designsystem.html
+++ b/designsystem.html
@@ -92,7 +92,35 @@
 	</header>
 <!-- Home end -->
 
-    	
+    	<div class="container-fluid cisco_black">
+		<div class="row">
+			<div class="col-sm-12 work-stats">
+				<img class="img-center" src="assets/images/keyscreen/keyscreen_main.jpg">
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid cisco_black">
+		<div class="row col-sm-12">
+<!-- 			<div class="col-sm-4 content-panel">
+			</div> -->
+			<div class="col-sm-6 content-panel">
+				<h3 class="text-white">Problem</h3>
+				<p>Simply put, we did not have a consistent design system, single source of truth created to serve all Momentum products. </p>
+				<p>As a results of that, different product teams had different component to fit their needs, resulting in messy, inconsistent design. There was also lack of communication among teams, to share any components or guidelines, and often times, noe one really knew who made which component</p>			</div>
+			<div class="col-sm-6 content-panel">
+				<h3 class="text-white">Goals</h3>
+				<li>Design standards</li>
+				<p>As mentioned, because every team was making their own component, we needed to set a standard that needed to be followed across all design teams, from planning, researching, creating, reviewing, and shipping</p>
+				<li>Process</li>
+				<p>We want to set up a process where designers are empowered and free to contribute. The components has to be easy to maintain and update for the creators, and easy to use for the users.</p>
+				<li>Industry standare</li>
+				<p>The new design system has to be up to industry standard with best practice, design trends and most importantly accessibility</p>
+				<li>Documentation</li>
+				<p>To eliminate the inconsistency and help the users use the components in a proper way, through, detailed documentation and how-to was necessary</p>
+
+			</div>
+		</div>
+	</div>
 
 	<div class="container-fluid">
 		<div class="row">
@@ -101,6 +129,7 @@
 			</div>
 		</div>
 	</div>
+
 	<div class=" container-tiny cisco_black">
 		<div class="row">
 			<div class="col-sm-8 div-center content-panel container-small">
@@ -135,7 +164,7 @@
 	</div>
 	<div class="cisco_black container-tiny">
 		<div class="row">
-			<div class="col-sm-6 div-center content-panel container-small">
+			<div class="col-sm-8 div-center content-panel container-small">
 				<h1 class="text-white">Renewed System</h1>
 				<p>As a team we have audited total of 39 components, deprecated 4 components, added 5 new components</p>
 				<p>From the 39 components audited, 34 of the components got rebranded and documented.</p>
@@ -152,7 +181,7 @@
 	</div>
 	<div class="cisco_black container-tiny">
 		<div class="row">
-			<div class="col-sm-6 div-center content-panel">
+			<div class="col-sm-8 div-center content-panel">
 				<h1 class="text-white">Typography</h1>
 				<p>CiscoSansTT was created in 2010 and widely adopted for all internal and external communications, as well as by many tools and apps. Recent audits have highlighted the many issues with the current font files, such as alignment and rendering issues, file sizes, missing glyphs and poorly executed language support. </p>
 				<p>Inter is a font family carefully crafted and designed for computer screens and available through Common Licence. Inter features a tall x-height to aid in readability of mixed-case and lower-case text. Inter is offered as both traditional constant font files (one per style, e.g. Bold Italic, Medium, etc.) as well as a Variable Font. The font files include "hinted" versions that have additional data in them for assisting ClearType, the text rasterizer used by Microsoft Windows.</p>
