--- a/keyscreen.html
+++ b/keyscreen.html
@@ -59,7 +59,7 @@
 				        	<div>
 				          		<h2 class="home-title uppercase" id="gradient">WORKS</h2>
 				          		<img class="cisco_logo" src="assets/images/momentum_design_logo.png">
-				          		<h1 class="uppercase">Momentum Keyscreen Library</h1>
+				          		<h1 class="uppercase">Momentum Key screen Library</h1>
 				        	</div>
 						</section>
 					</div>
@@ -131,7 +131,7 @@
 			</div>
 			<div class="col-sm-4 content-panel">
 				<h3 class="text-white">Categories</h3>
-				<p><li>Event Keynotes:</li>From C level executives and VP level on stage at Cisco Live, Webex One, and Directors and maangers in a product lead session.</p>
+				<p><li>Event Keynotes:</li>From C level executives and VP level on stage at Cisco Live, Webex One, and Directors and managers in a product lead session.</p>
 				<p><li>Product Vault:</li>A monthly PM run review of the features GAing and those coming up on the roadmap for Internal Stakeholders</p>
 				<p><li>What’s new and Help articles:</li>A monthly PM run review of the features GAing and those coming up on the roadmap for Internal Stakeholders</p>
 				<p><li>Transfer of Information Documents:</li>When new features are launched, our TMEs and TAC teams are be trained to support them for customers. Screens are often used to illustrate the feature. </p>
@@ -157,7 +157,7 @@
 			</div>
 			<div class="col-sm-4 content-panel">
 				<h3 class="text-white">Request</h3>
-				<p>We ask PMs to request any sceens by last Tuesday of previous month. PMs reach out to designers if they will need key screens on a feature, then PM and UX will decide together which screen makes sense to best represent the feature. </p>
+				<p>We ask PMs to request any screens by last Tuesday of previous month. PMs reach out to designers if they will need key screens on a feature, then PM and UX will decide together which screen makes sense to best represent the feature. </p>
 			</div>
 		</div>
 	</div>
@@ -176,9 +176,9 @@
 			</div>
 			<div class="col-sm-4 content-panel">
 				<h3 class="text-white">Review</h3>
-				<p>Quality assurance process will specificly be checking to make sure the key screens are using all the latest components from the Admin Component Library, color tokens from Theme Color library, text from Cisco Typography type system, and consistent spacing and padding from Admin Component library shell. </p>
+				<p>Quality assurance process will specifically be checking to make sure the key screens are using all the latest components from the Admin Component Library, color tokens from Theme Color library, text from Cisco Typography type system, and consistent spacing and padding from Admin Component library shell. </p>
 				<p>UX adds screen to Figma by 1st Tuesday of every month:</p>
-				<li>Product UX designer will add figma frame (not image) into marketing key creen library Figma. When adding these screens, each designer needs to fill in the Feature name, File link, PM name and their name, so other designers and PMs know who is working on what file.</li>
+				<li>Product UX designer will add figma frame (not image) into marketing key screen library Figma. When adding these screens, each designer needs to fill in the Feature name, File link, PM name and their name, so other designers and PMs know who is working on what file.</li>
 				<li>When the frame is placed in the key screen library, name the frame based on the Information Architecture and features. For example, "ControlHub_Users_LocationSettings". </li>
 				<li>Once these screens are in place, the designer who placed the screen comment-tag me so I can review the visual and UX to make sure it is indeed latest and greatest.</li>
 			</div>
@@ -215,7 +215,7 @@
 				<ul>
 				<li>It was surprise to experience first hand how disconnected the PMs and designers were. The PMs would normally grab design screen shots from other powerpoint files instead of figma.</li>
 				<li>The importance of this project was highlighted as I leaned that the key screens get used on the biggest stages for Cisco events, external meetings and sales presentations. Using outdated designs for external use was not only discrediting the designer's work, but could hurt the company image as well.</li>
-				<li>Biggest painpoint from this project was to track down the designers and get them to update the flaws on time. I ended up making lot of the updates myself to meet the deadline, and downside of that is that the designer working on the file will not be aware of the change, anc repeat the mistakes</li>
+				<li>Biggest pain point from this project was to track down the designers and get them to update the flaws on time. I ended up making lot of the updates myself to meet the deadline, and downside of that is that the designer working on the file will not be aware of the change, and repeat the mistakes</li>
 				<li>At the end of the day, hardest part was communication, but setting a system in place helped as the project progressed, and getting the managers to get on board, and have their designers add and update pro actively.</li>
 				</ul>
 			</div>
