--- a/webex_2020.html
+++ b/webex_2020.html
@@ -115,7 +115,7 @@
 				<p>The website will help with;
 					<li>Enable partners to launch their digital presence for Webex Product website</li>
 					<li>Support end-to-end journey of end user finding, learning, trying, and buying Webex</li>
-					<li>Handle both direct traffic and campign traffic</li>
+					<li>Handle both direct traffic and campaign traffic</li>
 					<li>Partner brand-able, customizable, with content syndication from Cisco</li> 
 				</p>
 			</div>
