--- a/designsystem.html
+++ b/designsystem.html
@@ -106,14 +106,14 @@
 			<div class="col-sm-6 content-panel">
 				<h3 class="text-white">Problem</h3>
 				<p>Simply put, we did not have a consistent design system, single source of truth created to serve all Momentum products. </p>
-				<p>As a results of that, different product teams had different component to fit their needs, resulting in messy, inconsistent design. There was also lack of communication among teams, to share any components or guidelines, and often times, noe one really knew who made which component</p>			</div>
+				<p>As a results of that, different product teams had different component to fit their needs, resulting in messy, inconsistent design. There was also lack of communication among teams, to share any components or guidelines, and often times, no one really knew who made which component</p>			</div>
 			<div class="col-sm-6 content-panel">
 				<h3 class="text-white">Goals</h3>
 				<li>Design standards</li>
 				<p>As mentioned, because every team was making their own component, we needed to set a standard that needed to be followed across all design teams, from planning, researching, creating, reviewing, and shipping</p>
 				<li>Process</li>
 				<p>We want to set up a process where designers are empowered and free to contribute. The components has to be easy to maintain and update for the creators, and easy to use for the users.</p>
-				<li>Industry standare</li>
+				<li>Industry standard</li>
 				<p>The new design system has to be up to industry standard with best practice, design trends and most importantly accessibility</p>
 				<li>Documentation</li>
 				<p>To eliminate the inconsistency and help the users use the components in a proper way, through, detailed documentation and how-to was necessary</p>
@@ -134,8 +134,8 @@
 		<div class="row">
 			<div class="col-sm-8 div-center content-panel container-small">
 				<h1 class="text-white">Execution</h1>
-				<p>The team started by dissecting all of the components. We took the Atomic Design approach, by rebuilding the component starting from Atoma, them Molecues, to Organism, and Templates if necessary.</p>
-				<p>Each of our designers started by learning Atomic Design System priciple, as it can provide great benefit to the design system. Atomic design enables the designers to have consistency, scalability, reusability, and better collaboration.</p>
+				<p>The team started by dissecting all of the components. We took the Atomic Design approach, by rebuilding the component starting from Atoms, then Molecules, to Organism, and Templates if necessary.</p>
+				<p>Each of our designers started by learning Atomic Design System principle, as it can provide great benefit to the design system. Atomic design enables the designers to have consistency, scalability, reusability, and better collaboration.</p>
 			</div>
 		</div>
 	</div>
@@ -151,7 +151,7 @@
 			<div class="col-sm-8 div-center content-panel container-small">
 				<h1 class="text-white">Dark Mode</h1>
 				<p>For the rebrand, we also implemented the Dark mode, which was not available on the current system.</p>
-				<p>According to the reseach, about 70% of software engineers prefer working in Dark mode, so it seems natural for them to create tools with dark backgrounds and colored text. Also research team got lot of user feedback from customers wanting dark mode. Dark mode also helps you save battery life, reduce blue light, which will reduce any stress on the eyes from the screen.</p>
+				<p>According to the research, about 70% of software engineers prefer working in Dark mode, so it seems natural for them to create tools with dark backgrounds and colored text. Also research team got lot of user feedback from customers wanting dark mode. Dark mode also helps you save battery life, reduce blue light, which will reduce any stress on the eyes from the screen.</p>
 			</div>
 		</div>
 	</div>
@@ -184,7 +184,7 @@
 			<div class="col-sm-8 div-center content-panel">
 				<h1 class="text-white">Typography</h1>
 				<p>CiscoSansTT was created in 2010 and widely adopted for all internal and external communications, as well as by many tools and apps. Recent audits have highlighted the many issues with the current font files, such as alignment and rendering issues, file sizes, missing glyphs and poorly executed language support. </p>
-				<p>Inter is a font family carefully crafted and designed for computer screens and available through Common Licence. Inter features a tall x-height to aid in readability of mixed-case and lower-case text. Inter is offered as both traditional constant font files (one per style, e.g. Bold Italic, Medium, etc.) as well as a Variable Font. The font files include "hinted" versions that have additional data in them for assisting ClearType, the text rasterizer used by Microsoft Windows.</p>
+				<p>Inter is a font family carefully crafted and designed for computer screens and available through Common License. Inter features a tall x-height to aid in readability of mixed-case and lower-case text. Inter is offered as both traditional constant font files (one per style, e.g. Bold Italic, Medium, etc.) as well as a Variable Font. The font files include "hinted" versions that have additional data in them for assisting ClearType, the text rasterizer used by Microsoft Windows.</p>
 			</div>
 		</div>
 	</div>
@@ -202,7 +202,7 @@
 				</h1>
 			</div>
 			<div class="col-sm-4 content-panel">
-				<p>Design Systems are always evolving and getting updated. It serves multiple products and designers, so we are constanly getting requests for updates, new components and reviews. What I showed here is just a portion of what goes into a complete design system. A complete system contains the following:</p>
+				<p>Design Systems are always evolving and getting updated. It serves multiple products and designers, so we are constantly getting requests for updates, new components and reviews. What I showed here is just a portion of what goes into a complete design system. A complete system contains the following:</p>
 			</div>
 			<div class="col-sm-4 content-panel">
 				<h3 class="text-white">Documentation</h3>
