--- a/webex_2020.html
+++ b/webex_2020.html
@@ -110,17 +110,17 @@
 	<div class="container container-tiny">
 		<div class="row">
 			<div class="col-sm-6 content-panel">
-				<h3>Purpose</h3>
+				<h1 class="text-white">Purpose</h1>
 				<p>Referencing and using the existing Webex.com as the back bone, we narrowed down, chopped out and added necessary information needed for our target audience. We came up with a revised site-map with a new information architecture to fulfill the target needs. From the new site-map, we added and re-arranged the content on a newly revised wireframe for best User Experience and flow.</p>
 				<p>The website will help with;
 					<li>Enable partners to launch their digital presence for Webex Product website</li>
 					<li>Support end-to-end journey of end user finding, learning, trying, and buying Webex</li>
-					<li>Handle both direct traffic and campaign traffic</li>
+					<li>Handle both direct traffic and campign traffic</li>
 					<li>Partner brand-able, customizable, with content syndication from Cisco</li> 
 				</p>
 			</div>
 			<div class="col-sm-6 content-panel">
-				<h3>Target Audience</h3>
+				<h1 class="text-white">Target Audience</h1>
 				<ul>
 					<li>Prospective buyers and users</li>
 					<li>Decision makers/IT buyers and business buyers</li>
@@ -152,11 +152,11 @@
 	<div class="container container-tiny">
 		<div class="row">
 			<div class="col-sm-6 content-panel">
-				<h3>Simple and cleaner design</h3>
+				<h1 class="text-white">Simple and cleaner design</h1>
 				<p>Final design was focused on clean and flat design, that will be easy to read through, and where no information on the page goes mission. By focusing on one color from the palette, it makes it easier for the users to follow through the story and the cleaner overall look is more engaging to the readers. </p>
 			</div>
 			<div class="col-sm-6 content-panel">
-				<h3>Partner Customization</h3>
+				<h1 class="text-white">Partner Customization</h1>
 				<p>Branding is important. Engagement Center websites provide customization experience for the Partners so they can include their logo, font and color palette.</p>
 			</div>
 		</div>
@@ -172,7 +172,7 @@
 	<div class="container container-tiny">
 		<div class="row">
 			<div class="col-sm-6 div-center content-panel">
-				<h3>Responsive</h3>
+				<h1 class="text-white">Responsive</h1>
 				<p>Offering the most fluid and pleasant experience for the both mobile and tablet versions.</p>
 			</div>
 		</div>
