--- a/keyscreen.html
+++ b/keyscreen.html
@@ -76,7 +76,7 @@
 				</div>
 				<div class="col-md-6">
 					<h3>Project</h3>
-					<p class="txt-box-pad-bot-20">he library will contain a selection of key product screens and new feature highlights for Control Hub and Partner Hub by quarter. The Key Screen Library will show up-to-date screens in the area of the UI in most requested views.</p>
+					<p class="txt-box-pad-bot-20">The library will contain a selection of key product screens and new feature highlights for Control Hub and Partner Hub by quarter. The Key Screen Library will show up-to-date screens in the area of the UI in most requested views.</p>
 					<h3>Role</h3>
 					<p class="txt-box-pad-bot-20">QA Designer, Project Management</p>
 					<h3>Team</h3>
